clang: add CXXMethod and namespace to symbol tree

https://bugzilla.gnome.org/show_bug.cgi?id=779797